svg bg change and line height of cards

--- a/fomo-app.html
+++ b/fomo-app.html
@@ -38,6 +38,7 @@
           <li>Mood board</li>
           <li>Logo & branding system</li>
           <li>Wireframes</li>
+          <li><a class="link" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision clickable prototype</a></li>
         </ul>
       </div>
 
@@ -130,6 +131,14 @@
       <figure class="wide-image">
         <img class="responsive-h" src="img/fomo-app-lofi-wireframes.png" alt="Picture of Lo-Fi Wireframes">
         <figcaption>Lo-Fi Wireframes made out of post-it notes.</figcaption>
+      </figure>
+      <div class="content-block">
+        <h3>Logo</h3>
+        <p>xxx</p>
+      </div>
+      <figure class="wide-image">
+        <img class="responsive-h" src="#" alt="Picture of Logo">
+        <figcaption></figcaption>
       </figure>
     </main>
 
