--- a/fomo-app.html
+++ b/fomo-app.html
@@ -30,7 +30,7 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>To create an app that combats Fear of Missing Out (FoMO), using insights from interviews with people who present FoMO and also research from behavioural scientists.</p>
+        <p>To create an app that combats Fear of Missing Out (FoMO), using insights from interviews with people who present FoMO and also research from behavioural scientists. The timeline for the project was approximately a month.</p>
         <h4>Deliverables:</h4>
         <ul>
           <li>Storyboard</li>
@@ -50,6 +50,19 @@
         <img class="responsive-h" src="img/gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
         <figcaption>xxx</figcaption>
       </figure>
+      <div class="content-block">
+        <h3>Research</h3>
+        <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subject of habits and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">research notes here</a>.</p>
+        <h4><span>Key takeaways</span></h4>
+        <ul>
+          <li>FoMO starts with sadness and social media makes it worse</li>
+          <li>The more a person is inclined to gratitude, the less likely he or she is to be depressed, anxious, lonely, envious, or neurotic</li>
+          <li>Gratitude can boost serotonin, you don’t even have to find anything, it’s the searching that counts</li>
+          <li>By writing down 3 new things you are grateful for, the brain retains a pattern, scanning for positives not negatives first</li>
+          <li>Tiny habits: ‘After I <em>[existing habit]</em>, I will <em>[tiny new behaviour]</em>'</li>
+          <li>Once Hooked, external triggers are no longer needed, internal triggers precipitate the desired behaviour</li>
+        </ul>
+      </div>
       <div class="content-block">
         <h3>Interviews</h3>
         <p>I interviewed 3 people to find out about their smartphone habits and asked them about suffering from FoMO in general. At the end of the interview I gave the participants a survey which was based upon the work of Przybyzlski and colleagues (2013). This was to ascertain how the people fit onto the FoMO Scale, established by said researchers. Each interviewee fit into the category of suffering from a medium level if FoMO. My <a class="link" href="https://docs.google.com/document/d/1BqhFUpJ3KJCYWDPhwDC3fTTMMBcoGi8pZlWOGUncTvc/edit?usp=sharing">research plan</a> is available to view.</p>
@@ -80,20 +93,6 @@
         <img class="responsive-h" src="img/fomo-persona.jpg" alt="Picture of a persona to describe the user for Gr8-itude">
         <figcaption>Persona of Maria, who suffers from FoMO</figcaption>
       </figure>
-      <div class="content-block">
-        <h3>Research</h3>
-        <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subject of habits and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">research notes here</a>.</p>
-        <h4><span>Key takeaways</span></h4>
-        <ul>
-          <li>FoMO starts with sadness and social media makes it worse</li>
-          <li>The more a person is inclined to gratitude, the less likely he or she is to be depressed, anxious, lonely, envious, or neurotic</li>
-          <li>Gratitude can boost serotonin, you don’t even have to find anything, it’s the searching that counts</li>
-          <li>By writing down 3 new things you are grateful for, the brain retains a pattern, scanning for positives not negatives first</li>
-          <li>Tiny habits: ‘After I <em>[existing habit]</em>, I will <em>[tiny new behaviour]</em>'</li>
-          <li>Once Hooked, external triggers are no longer needed, internal triggers precipitate the desired behaviour</li>
-        </ul>
-      </div>
-
       <div class="content-block">
         <h3>Problem statement</h3>
         <p>Using the interviews and the research into FoMO and habits, I wanted to try to create an app that makes people more resistant to FoMO without drastically changing their lives.</p>
