--- a/fomo-app.html
+++ b/fomo-app.html
@@ -38,17 +38,18 @@
           <li>Mood board</li>
           <li>Logo & branding system</li>
           <li>Wireframes</li>
-          <li><a class="link" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision clickable prototype</a></li>
+          <li><a class="link" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a></li>
         </ul>
       </div>
 
       <div class="content-block">
         <h3>Solution</h3>
-        <p>xxx</p>
+        <p>Gr8ti-tude is a self-help alarm clock to help combat FoMO in an ever increasingly connected world. Importantly the solution isn't another app/service to get addicted to or even deleting your social media accounts. Here, minimal time input for maximum output is paramount.</p>
+        <p>Using the alarm clock (setting and waking up to) as an external trigger, Gr8ti-tude offers the user a chance to create a positve tiny new behaviour to get health benefits and improve general happiness. Gr8ti-tude is based on proven psychological principles of practicing gratitude.</p>
       </div>
       <figure class="wide-image">
         <img class="responsive-h" src="img/gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
-        <figcaption>xxx</figcaption>
+        <figcaption>Gr8ti-tude, wake up happier and combat FoMO.</figcaption>
       </figure>
       <div class="content-block">
         <h3>Research</h3>
