--- a/fomo-app.html
+++ b/fomo-app.html
@@ -140,6 +140,14 @@
         <img class="responsive-h" src="#" alt="Picture of Logo">
         <figcaption></figcaption>
       </figure>
+      <div class="content-block">
+        <h3>Annotated details</h3>
+        <p>Annotated images for key details to help handover to developers</p>
+      </div>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/gr8ti-tude-annotations.png" alt="Picture of an annotated screen and buttons">
+        <figcaption>Picture of an annotated screen and buttons</figcaption>
+      </figure>
     </main>
 
     <footer>
