--- a/fomo-app.html
+++ b/fomo-app.html
@@ -137,8 +137,8 @@
         <p>xxx</p>
       </div>
       <figure class="wide-image">
-        <img class="responsive-h" src="#" alt="Picture of Logo">
-        <figcaption></figcaption>
+        <img class="responsive-h" src="img/Gr8ti-tude_Logo-30.svg" alt="Picture of the Gr8ti-tude logo">
+        <figcaption>Gr8ti-tude logo</figcaption>
       </figure>
       <div class="content-block">
         <h3>Annotated details</h3>
