--- a/fomo-app.html
+++ b/fomo-app.html
@@ -134,7 +134,7 @@
       </figure>
       <div class="content-block">
         <h3>Logo</h3>
-        <p>xxx</p>
+        <p>I wanted the logo to reflect the alarm function of the app and for it to also incorprate a reference to the circadian rhythm. The roundness of the logo is because according to Susan Weinschenk PhD, 'people prefer objects with curves – a preference that’s evident even in brain scans.' On the splash screen the arrows on the face of the clock can be animated to indicate loading, as seen in the <a class="link" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a>.</p>
       </div>
       <figure class="wide-image">
         <img class="responsive-h" src="img/Gr8ti-tude_Logo-30.svg" alt="Picture of the Gr8ti-tude logo">
