accent-two change, h4 spans on fomo

--- a/fomo-app.html
+++ b/fomo-app.html
@@ -31,7 +31,7 @@
       <div class="content-block">
         <h3>Challenge</h3>
         <p>To create an app that combats Fear of Missing Out (FoMO), using insights from interviews with people who present FoMO and also research from behavioural scientists. The timeline for the project was approximately a month.</p>
-        <h4>Deliverables:</h4>
+        <h4><span>Deliverables:</span></h4>
         <ul>
           <li>Storyboard</li>
           <li>Persona</li>
@@ -110,11 +110,11 @@
       </figure>
       <div class="content-block">
         <h3>Mood board</h3>
-        <h4>Colour</h4>
+        <h4><span>Colour</span></h4>
         <p>The app is used at two different times, before </p>
-        <h4>Typeface</h4>
+        <h4><span>Typeface</span></h4>
         <p>xxx</p>
-        <h4>Feel</h4>
+        <h4><span>Feel</span></h4>
         <p>xxx</p>
       </div>
       <figure class="wide-image">
