--- a/fomo-app.html
+++ b/fomo-app.html
@@ -190,6 +190,20 @@
       <img class="responsive-h" src="img/gr8ti-tude-annotations.png" alt="Picture of an annotated screen and buttons">
       <figcaption>Picture of an annotated screen and buttons</figcaption>
     </figure>
+    <div class="project-nav">
+      <div class="project-prev">
+        <a href="#">
+          <span class="direction">Previous</span>
+          <span class="description">#6 Title of the previous project</span>
+        </a>
+      </div>
+      <div class="project-next">
+        <a href="#">
+          <span class="direction">Next</span>
+          <span class="description">#2 Title of the next project</span>
+        </a>
+      </div>
+    </div>
   </main>
 
   <footer>
