--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 
   <header class="content-block hero">
     <!-- <h1>Under construction</h1> -->
-    <h1>Hi my name is David and I am a <span>UX</span> and <span>Graphic Design</span> professional.</h1>
-    <h2>I am always looking for new challenges and experiences</h2>
+    <h1>Hi my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
+    <h2>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets get in touch.</h2>
   </header>
 
     <!-- <div class="container"> -->
@@ -33,14 +33,7 @@
         </p>
         <p>More to come...</p>
       </div>
-      <figure>
-        <img class="responsive-h" src="img/sm-story-board-light.png" alt="Hand drawn plan of the room for the design thinking workshop">
-        <figcaption>xxx</figcaption>
-      </figure>
-      <figure class="wide-image">
-        <img class="responsive-h" src="img/sm-story-board-light.png" alt="Hand drawn plan of the room for the design thinking workshop">
-        <figcaption>xxx</figcaption>
-      </figure>
+
     </main>
     <footer>
       <div>
