--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </nav>
   <header class="content-block hero">
     <!-- <h1>Under construction</h1> -->
-    <h1>Hi my name is David and I am a <span>UX</span> and <span>Graphic Design</span> professional.</h1>
-    <h2>I enjoy exploring a project's full potential throughout the whole process in a variety of roles.</h2>
+    <h1>Hi my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
+    <h2>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets get in touch.</h2>
   </header>
   <main id="projects" class="projects content-block">
     <h3>Projects</h3>
