--- a/fomo-app.html
+++ b/fomo-app.html
@@ -32,7 +32,7 @@
   <main>
     <div class="content-block">
       <h3>Challenge</h3>
-      <p>To create an app that combats Fear of Missing Out (FoMO), using insights from interviews with people who present FoMO and also research from behavioural scientists. The timeline for the project was approximately a month.</p>
+      <p>To create an app to help combat Fear of Missing Out (FoMO), using insights from interviews with people who present FoMO and also research from behavioural scientists. The timeline for the project was approximately a month.</p>
       <h4><span>Deliverables:</span></h4>
       <ul>
         <li>Storyboard</li>
