--- a/fomo-app.html
+++ b/fomo-app.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Design Thinking | Combating FoMO</title>
+  <title>David Spencer | Combating FoMO</title>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700|Roboto:300,400,700" rel="stylesheet">
@@ -40,7 +40,7 @@
         <li>Mood board</li>
         <li>Logo & branding system</li>
         <li>Wireframes</li>
-        <li><a class="link" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a></li>
+        <li><a class="link" target="_blank" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a></li>
       </ul>
     </div>
 
@@ -69,7 +69,7 @@
     <div class="content-block">
       <h3>Research</h3>
       <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subject of habits
-        and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">research notes here</a>.</p>
+        and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my <a class="link" target="_blank" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">research notes here</a>.</p>
       <h4><span>Key takeaways</span></h4>
       <ul>
         <li>FoMO starts with sadness and social media makes it worse</li>
@@ -77,13 +77,13 @@
         <li>Gratitude can boost serotonin, you don’t even have to find anything, it’s the searching that counts</li>
         <li>By writing down 3 new things you are grateful for, the brain retains a pattern, scanning for positives not negatives first</li>
         <li>Forming tiny new behaviours: ‘After I <em>[existing habit]</em>, I will <em>[tiny new behaviour]</em>'</li>
-        <li>Once Hooked, external triggers are no longer needed, internal triggers precipitate the desired behaviour</li>
+        <li>Hooked feedback loop: Trigger (external) > Action > Variable Reward >  Investment > Trigger (internal)</li>
       </ul>
     </div>
     <div class="content-block">
       <h3>Interviews</h3>
       <p>I interviewed 3 people to find out about their smartphone habits and asked them about suffering from FoMO in general. At the end of the interview I gave the participants a survey which was based upon the work of Przybyzlski and colleagues
-        (2013). This was to ascertain how the people fit onto the FoMO Scale, created by said researchers. Each interviewee fit into the category of suffering from a medium level of FoMO. My <a class="link" href="https://docs.google.com/document/d/1BqhFUpJ3KJCYWDPhwDC3fTTMMBcoGi8pZlWOGUncTvc/edit?usp=sharing">research
+        (2013). This was to ascertain how the people fit onto the FoMO Scale, created by said researchers. Each interviewee fit into the category of suffering from a medium level of FoMO. My <a class="link" target="_blank" href="https://docs.google.com/document/d/1BqhFUpJ3KJCYWDPhwDC3fTTMMBcoGi8pZlWOGUncTvc/edit?usp=sharing">research
           plan</a> is available to view.</p>
       <h4><span>Key takeaways from the interviews</span></h4>
       <ul>
@@ -145,7 +145,7 @@
     <div class="content-block">
       <h3>Logo</h3>
       <p>I wanted the logo to reflect the alarm function of the app and for it to also incorprate a reference to the circadian rhythm. The roundness of the logo is for friendliness, according to Susan Weinschenk PhD, 'people prefer objects with
-        curves – a preference that’s evident even in brain scans.' On the splash screen the arrows on the face of the clock can be animated to indicate loading, as seen in the <a class="link" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision
+        curves – a preference that’s evident even in brain scans.' On the splash screen the arrows on the face of the clock can be animated to indicate loading, as seen in the <a class="link" target="_blank" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision
           Studio clickable prototype</a>.</p>
     </div>
     <figure class="wide-image">
@@ -173,7 +173,7 @@
     <div class="content-block">
       <h3>User flow</h3>
       <p>The basic user flow is broken into two stages, night-time and morning.</p>
-      <p>At night the user sets their alarm and is prompted to set a maximum of 3 gratitudes for the day. The user can skip putting in gratitudes or even just put in 1 or 2, this is to promote 'reactance' – a sense of user autonomy required for repeat engaement.</p>
+      <p>At night the user sets their alarm and is prompted to set a maximum of 3 gratitudes for the day. The user can skip putting in gratitudes or even just put in 1 or 2, this is to promote 'reactance' – a sense of user autonomy required for repeat engagement.</p>
     </div>
     <figure class="wide-image">
       <img class="responsive-h" src="img/gr8ti-tude-basic-flow.png" alt="Picture of UI for the basic user flow">
