blah blah annotations png adjusted

--- a/fomo-app.html
+++ b/fomo-app.html
@@ -46,8 +46,7 @@
 
     <div class="content-block">
       <h3>Solution</h3>
-      <p>Gr8ti-tude is a self-help alarm clock to help combat FoMO in an ever increasingly connected world. Importantly the solution isn't another app/service to get addicted to or even deleting your social media accounts. Here, minimal time input
-        for maximum output is paramount.</p>
+      <p>Gr8ti-tude is a self-help alarm clock to help combat FoMO in an ever increasingly connected world. Importantly the solution isn't another app/service to get addicted to or even deleting your social media accounts.</p>
     </div>
     <figure class="wide-image">
       <img class="responsive-h" src="img/gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
@@ -136,7 +135,7 @@
       <p>For the logo, headings and button text I used the typeface Quicksand. It is sans-serif display typeface with rounded terminals that is also legible at small font sizes.</p>
       <p>Lato is used for body text and sub-headings. I chose Lato for its warmth and stability, it is legible at small font sizes and it has classical proportions.</p>
       <h4><span>Feel</span></h4>
-      <p>I wanted to represent the idea of the circadian rhythm since going to bed and wakng up is inherent in the user flow of Gr8ti-tude. Also important was the notion of self-help, but no kumbaya shit.</p>
+      <p>Self-help, but no kumbaya shit. Friendly, casual and fun.</p>
     </div>
     <figure class="wide-image">
       <img class="responsive-h" src="img/gr8ti-tude-mood-board.png" alt="Picture of a mood board for Gr8-itude">
