--- a/fomo-app.html
+++ b/fomo-app.html
@@ -189,6 +189,15 @@
       <img class="responsive-h" src="img/gr8ti-tude-annotations.png" alt="Picture of an annotated screen and buttons">
       <figcaption>Picture of an annotated screen and buttons</figcaption>
     </figure>
+    <div class="content-block">
+      <h3>Summary</h3>
+      <p>As stated above, Gr8ti-tude is a self-help alarm clock to help combat FoMO in an ever increasingly connected world. From the interviews conducted and the research I undertook, the solution isn't another app/service to get addicted to or even deleting your social media accounts.</p>
+      <p>Next steps would be to test this MVP on users to refine the UI and also to look into some other features such as happiness monitoring and image uploads to add to the gratitudes. The <a class="link" target="_blank" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a> is available for you to see, unfortunately InVision lags a lot when viewing on mobile, I suggest you view this on a desktop to see what the actual experience would be like.</p>
+    </div>
+    <figure class="wide-image">
+      <img class="responsive-h" src="img/gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
+      <figcaption>Gr8ti-tude, wake up happier and combat FoMO.</figcaption>
+    </figure>
     <div class="project-nav">
       <div class="project-prev">
         <a href="#">
