--- a/fomo-app.html
+++ b/fomo-app.html
@@ -198,7 +198,7 @@
       <img class="responsive-h" src="img/gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
       <figcaption>Gr8ti-tude, wake up happier and combat FoMO.</figcaption>
     </figure>
-    <div class="project-nav">
+  <!--  <div class="project-nav">
       <div class="project-prev">
         <a href="#">
           <span class="direction">Previous</span>
@@ -211,7 +211,7 @@
           <span class="description">#2 Title of the next project</span>
         </a>
       </div>
-    </div>
+    </div> -->
   </main>
 
   <footer>
