--- a/fomo-app.html
+++ b/fomo-app.html
@@ -79,6 +79,10 @@
         <li>Hooked feedback loop: Trigger (external) > Action > Variable Reward >  Investment > Trigger (internal)</li>
       </ul>
     </div>
+    <figure class="wide-image">
+      <img class="responsive-h" src="img/fomo-key-takeaways.png" alt="Picture of the key takeaways from my research">
+      <figcaption>Key takeaways from my research</figcaption>
+    </figure>
     <div class="content-block">
       <h3>Interviews</h3>
       <p>I interviewed 3 people to find out about their smartphone habits and asked them about suffering from FoMO in general. At the end of the interview I gave the participants a survey which was based upon the work of Przybyzlski and colleagues
