footer and qual, card span fix

--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -153,6 +153,9 @@
         <h5>Email</h5>
         <a class="link" href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
       </div>
+      <div class="">
+        <h6>Designed and coded by David Spencer, source code available on <a class="link" href="https://github.com/davidjspencer/portfolio">Github</a>.</h6>
+      </div>
     </footer>
     <script type="text/javascript" src="js/scroll.js"></script>
 </body>
