--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="card-text">
           <p>Design Thinking Workshop</p>
-          <span>Design Thinking</span>
+          <p><span>Design Thinking</span></p>
         </div>
       </a>
     </div>
@@ -43,7 +43,20 @@
         </div>
         <div class="card-text">
           <p>Gr8ti-tude:<br>Wake up happier</p>
-          <span>User Interviews </span><span>Branding </span><span>Wireframes</span>
+          <p><span>User Interviews </span><span>Branding </span><span>Wireframes</span>
+          </p>
+        </div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="qual-and-quan.html">
+        <div class="card-img">
+          <img src="img/Google-Merch-Thumb.jpg" alt="">
+        </div>
+        <div class="card-text">
+          <p>Qual and Quan Informing UI</p>
+          <p><span>Analytics</span><span>Usability Tests</span><span>Data Visualisation</span><span>UI</span>
+          </p>
         </div>
       </a>
     </div>
@@ -53,7 +66,8 @@
       </div>
       <div class="card-text">
         <p>Placeholder project</p>
-        <span>UX</span><span>Ethnographic Research<span>
+        <p><span>UX</span><span>Ethnographic Research<span>
+        </p>
       </div>
     </div>
     <div class="card">
@@ -62,16 +76,8 @@
       </div>
       <div class="card-text">
         <p>Placeholder project</p>
-        <span>UX</span><span>Ethnographic Research<span>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-img">
-        <img src="https://via.placeholder.com/400x300" alt="">
-      </div>
-      <div class="card-text">
-        <p>Placeholder project</p>
-        <span>UX</span><span>Ethnographic Research<span>
+        <p><span>UX</span><span>Ethnographic Research<span>
+        </p>
       </div>
     </div>
   </main>
@@ -87,6 +93,9 @@
     <div>
       <h5>Email</h5>
       <a class="link" href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
+    </div>
+    <div class="">
+      <h6>Designed and coded by David Spencer, source code available on <a class="link" href="https://github.com/davidjspencer/portfolio">Github</a>.</h6>
     </div>
   </footer>
   <script type="text/javascript" src="js/scroll.js"></script>
