--- a/index.html
+++ b/index.html
@@ -60,26 +60,17 @@
         </div>
       </a>
     </div>
-    <div class="card">
+    <div class="card inactive">
       <div class="card-img">
         <img src="https://via.placeholder.com/400x300" alt="">
       </div>
       <div class="card-text">
-        <p>Placeholder project</p>
-        <p><span>UX</span><span>Ethnographic Research<span>
+        <p>More to come...</p>
+        <p><span>Come back soon</span><span>Under construction</span>
         </p>
       </div>
     </div>
-    <div class="card">
-      <div class="card-img">
-        <img src="https://via.placeholder.com/400x300" alt="">
-      </div>
-      <div class="card-text">
-        <p>Placeholder project</p>
-        <p><span>UX</span><span>Ethnographic Research<span>
-        </p>
-      </div>
-    </div>
+
   </main>
   <footer>
     <div>
