--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -22,7 +22,7 @@
   <header class="content-block hero">
     <h1>Qualitative and Quantitative Research Informing UI</h1>
     <h2>Using Analytics to Inform UX Design</h2>
-    <span class="tags">UX </span><span class="tags">Design Thinking</span>
+    <span class="tags">Analytics</span><span class="tags">Usability Testing</span><span class="tags">UI</span>
   </header>
 
     <!-- <div class="container"> -->
@@ -35,8 +35,8 @@
         <p>Distilling Google Analytics data and creating usability tests to
         </p>
       </div>
-        <figure>
-          <img class="responsive-h" src="img/PlanDesignThinkingWorkshop.jpg" alt="xxx">
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="xxx">
           <figcaption>xxx</figcaption>
         </figure>
         <div class="project-nav">
