bottom nav links

--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -127,15 +127,15 @@
       </div>
       <div class="project-nav">
         <div class="project-prev">
-          <a href="#">
+          <a href="qual-and-quan.html">
             <span class="direction">Previous</span>
-            <span class="description">#6 Title of the previous project</span>
+            <span class="description">#2 Qual &amp; Quan Informing UI</span>
           </a>
         </div>
         <div class="project-next">
-          <a href="#">
+          <a href="fomo-app.html">
             <span class="direction">Next</span>
-            <span class="description">#2 Title of the next project</span>
+            <span class="description">#1 Gr8ti-tude: Wake up happier</span>
           </a>
         </div>
       </div>
