--- a/fomo-app.html
+++ b/fomo-app.html
@@ -202,20 +202,20 @@
       <img class="responsive-h" src="img/gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
       <figcaption>Gr8ti-tude, wake up happier and combat FoMO.</figcaption>
     </figure>
-  <!--  <div class="project-nav">
+    <div class="project-nav">
       <div class="project-prev">
-        <a href="#">
+        <a href="design-thinking-workshop.html">
           <span class="direction">Previous</span>
-          <span class="description">#6 Title of the previous project</span>
+          <span class="description">#3 Design Thinking Workshop</span>
         </a>
       </div>
       <div class="project-next">
-        <a href="#">
+        <a href="qual-and-quan.html">
           <span class="direction">Next</span>
-          <span class="description">#2 Title of the next project</span>
+          <span class="description">#2 Qual &amp; Quan Informing UI</span>
         </a>
       </div>
-    </div> -->
+    </div>
   </main>
 
   <footer>
