--- a/index.html
+++ b/index.html
@@ -26,17 +26,6 @@
   <main id="projects" class="projects content-block">
     <h3>Projects</h3>
     <div class="card">
-      <a href="design-thinking-workshop.html">
-        <div class="card-img">
-          <img src="img/thumb-design-thinking.svg" alt="">
-        </div>
-        <div class="card-text">
-          <p>Design Thinking Workshop</p>
-          <p><span>Design Thinking</span></p>
-        </div>
-      </a>
-    </div>
-    <div class="card">
       <a href="fomo-app.html">
         <div class="card-img">
           <img src="img/Gr8ti-tude_Logo-30.svg" alt="">
@@ -57,6 +46,17 @@
           <p>Qual and Quan Informing UI</p>
           <p><span>Analytics</span><span>Usability Tests</span><span>Data Visualisation</span><span>UI</span>
           </p>
+        </div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="design-thinking-workshop.html">
+        <div class="card-img">
+          <img src="img/design-thinking-thumb.jpg" alt="">
+        </div>
+        <div class="card-text">
+          <p>Design Thinking Workshop</p>
+          <p><span>Design Thinking</span></p>
         </div>
       </a>
     </div>
