--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -41,15 +41,15 @@
         </figure>
         <div class="project-nav">
           <div class="project-prev">
-            <a href="#">
+            <a href="fomo-app.html">
               <span class="direction">Previous</span>
-              <span class="description">#6 Title of the previous project</span>
+              <span class="description">#1 Gr8ti-tude: Wake up happier</span>
             </a>
           </div>
           <div class="project-next">
-            <a href="#">
+            <a href="design-thinking-workshop.html">
               <span class="direction">Next</span>
-              <span class="description">#2 Title of the next project</span>
+              <span class="description">#3 Design Thinking Workshop</span>
             </a>
           </div>
         </div>
