--- a/about.html
+++ b/about.html
@@ -29,9 +29,10 @@
     <main>
       <div class="content-block">
         <h3>Background</h3>
-        <p>I have an array of experiences, from teaching to marketing and graphic design, this has become a great help in my burgeoning career as a <span>UX designer</span>.
+        <p>I am originally from Australia, but I currently live in Barcelona where I have just moved from Berlin. The past few years I have worked in a couple of differnt industries that have culminated in me becoming a <span>UX designer</span>. Specifically; I was a marketing manager at a Techcrunch Disrupt Europe winner and recently I have been doing graphic design as a freelancer. Both these experiences have been extremely valuable for UX.
         </p>
-        <p>More to come...</p>
+        <p>I transitioned towards the UX industry by completing a masters-level diploma in UX Design from Open Classrooms. I enjoyed crystalising my experience into a new career and I look forward to exemplifying my broad skill-set.</p>
+        <p>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets build great products together.</p>
       </div>
 
     </main>
