--- a/qual-and-quan.html
+++ b/qual-and-quan.html
@@ -29,12 +29,61 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce site.
+        <p>A case study of the <a class="link" target="_blank" href="#">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce site.<br><br><br>This page is currently underconstruction.
         </p>
         <h3>Solution</h3>
-        <p>Distilling Google Analytics data and creating usability tests to
+        <p>After distilling data from Google Analytics and creating usability tests to confirm these observations, I discovered that surprisingly the Google Merchandise Store has a lot of room for improvement. For the sake I this case study I concentrated on user flow of finding products and the check-out process.
         </p>
       </div>
+
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide2.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide3.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide4.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide5.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide6.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide7.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide8.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide9.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide10.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide11.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/qual-and-quan/google-merch-slide12.jpg" alt="xxx">
+          <figcaption>xxx</figcaption>
+        </figure>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide13.jpg" alt="xxx">
           <figcaption>xxx</figcaption>
