--- a/fomo-app.html
+++ b/fomo-app.html
@@ -40,7 +40,7 @@
         <li>Mood board</li>
         <li>Logo & branding system</li>
         <li>Wireframes</li>
-        <li><a class="link" target="_blank" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a> <span class="hide-lg">(InVision works a smoother on desktop)</span></li>
+        <li><a class="link" target="_blank" href="https://projects.invisionapp.com/prototype/Gr8ti-tude-Colour-sketch-cjvb1q85h00eiqv01mvzhnwoy/play/">InVision Studio clickable prototype</a> <span class="hide-lg">(InVision works a lot smoother on desktop)</span></li>
       </ul>
     </div>
 
