--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
   <header class="content-block hero">
     <!-- <h1>Under construction</h1> -->
-    <h1>Hi my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
+    <h1>Hey, my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
     <h2>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets get in touch.</h2>
   </header>
   <main id="projects" class="projects content-block">
