--- a/about.html
+++ b/about.html
@@ -21,17 +21,17 @@
 
   <header class="content-block hero">
     <!-- <h1>Under construction</h1> -->
-    <h1>Hi my name is David and I am a <span>UX</span> and <span>graphic design</span> professional.</h1>
-    <h2>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets get in touch.</h2>
+    <h1>Need a <span>UX designer</span> in Barcelona?</h1>
+    <h2>Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets build great products together.</h2>
   </header>
 
     <!-- <div class="container"> -->
     <main>
       <div class="content-block">
         <h3>Background</h3>
-        <p>I am originally from Australia, but I currently live in Barcelona where I have just moved from Berlin. The past few years I have worked in a couple of differnt industries that have culminated in me becoming a <span>UX designer</span>. Specifically; I was a marketing manager at a Techcrunch Disrupt Europe winner and recently I have been doing graphic design as a freelancer. Both these experiences have been extremely valuable for UX.
+        <p>A little bit about me... I am originally from Australia, but I currently live in Barcelona where I have just moved from Berlin. The past few years I have worked in a couple of differnt industries that have culminated in me becoming a <span>UX designer</span>. Specifically; I was a marketing manager at a Techcrunch Disrupt Europe winner and recently I have been doing graphic design as a freelancer. Both these experiences have been extremely valuable for UX.
         </p>
-        <p>I transitioned towards the UX industry by completing a masters-level diploma in UX Design from Open Classrooms. I enjoyed crystalising my experience into a new career and I look forward to exemplifying my broad skill-set.</p>
+        <p>I transitioned towards the UX industry by completing a masters-level diploma in UX Design from Open Classrooms. It's been enjoyable crystalising my experience into a new career and I look forward to exemplifying my broad skill-set.</p>
         <p>Hiring in Barcelona? Or remotely? <a class="link" href="mailto:davidjspencer@gmail.com">Email me</a> and lets build great products together.</p>
       </div>
 
